lib_papyrus/parser/PapyrusParser.py
# Generated from PapyrusParser.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PapyrusParser ( Parser ):

    grammarFileName = "PapyrusParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'set'", "'add'", "'delete'", "'update'", "'run'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'-'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "NL", "VERB_SET", 
                      "VERB_ADD", "VERB_DELETE", "VERB_UPDATE", "VERB_RUN", 
                      "BOOL_LITERAL", "INT_LITERAL", "STRING_LITERAL", "BYTES_LITERAL", 
                      "NAME", "HWS", "VWS", "COLON", "COMMA", "DOT", "EQUAL", 
                      "L_PAREN", "MINUS", "R_PAREN", "LINE_COMMENT_POUND" ]

    RULE_papyrusFile = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_singleLineStatement = 3
    RULE_blockStatement = 4
    RULE_blockLines = 5
    RULE_blockStartingLine = 6
    RULE_standaloneLine = 7
    RULE_setLine = 8
    RULE_addLine = 9
    RULE_deleteLine = 10
    RULE_updateLine = 11
    RULE_runLine = 12
    RULE_blankLine = 13
    RULE_setLineValue = 14
    RULE_lineEndingJunk = 15
    RULE_objectNameSearchable = 16
    RULE_macro = 17
    RULE_args = 18
    RULE_arg = 19
    RULE_positionalArg = 20
    RULE_keywordArg = 21
    RULE_objectAttribute = 22
    RULE_typeName = 23
    RULE_objectName = 24
    RULE_attributeName = 25
    RULE_macroName = 26
    RULE_macroKeywordArgName = 27
    RULE_anyLiteral = 28
    RULE_boolLiteral = 29
    RULE_intLiteral = 30
    RULE_stringLiteral = 31
    RULE_bytesLiteral = 32
    RULE_name = 33

    ruleNames =  [ "papyrusFile", "statements", "statement", "singleLineStatement", 
                   "blockStatement", "blockLines", "blockStartingLine", 
                   "standaloneLine", "setLine", "addLine", "deleteLine", 
                   "updateLine", "runLine", "blankLine", "setLineValue", 
                   "lineEndingJunk", "objectNameSearchable", "macro", "args", 
                   "arg", "positionalArg", "keywordArg", "objectAttribute", 
                   "typeName", "objectName", "attributeName", "macroName", 
                   "macroKeywordArgName", "anyLiteral", "boolLiteral", "intLiteral", 
                   "stringLiteral", "bytesLiteral", "name" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    NL=3
    VERB_SET=4
    VERB_ADD=5
    VERB_DELETE=6
    VERB_UPDATE=7
    VERB_RUN=8
    BOOL_LITERAL=9
    INT_LITERAL=10
    STRING_LITERAL=11
    BYTES_LITERAL=12
    NAME=13
    HWS=14
    VWS=15
    COLON=16
    COMMA=17
    DOT=18
    EQUAL=19
    L_PAREN=20
    MINUS=21
    R_PAREN=22
    LINE_COMMENT_POUND=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PapyrusFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(PapyrusParser.StatementsContext,0)


        def getRuleIndex(self):
            return PapyrusParser.RULE_papyrusFile

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPapyrusFile" ):
                return visitor.visitPapyrusFile(self)
            else:
                return visitor.visitChildren(self)




    def papyrusFile(self):

        localctx = PapyrusParser.PapyrusFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_papyrusFile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PapyrusParser.StatementContext)
            else:
                return self.getTypedRuleContext(PapyrusParser.StatementContext,i)


        def getRuleIndex(self):
            return PapyrusParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = PapyrusParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapyrusParser.NL) | (1 << PapyrusParser.VERB_SET) | (1 << PapyrusParser.VERB_ADD) | (1 << PapyrusParser.VERB_DELETE) | (1 << PapyrusParser.VERB_UPDATE) | (1 << PapyrusParser.VERB_RUN) | (1 << PapyrusParser.HWS) | (1 << PapyrusParser.LINE_COMMENT_POUND))) != 0):
                self.state = 70
                self.statement()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleLineStatement(self):
            return self.getTypedRuleContext(PapyrusParser.SingleLineStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(PapyrusParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return PapyrusParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PapyrusParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PapyrusParser.NL, PapyrusParser.VERB_SET, PapyrusParser.VERB_DELETE, PapyrusParser.VERB_RUN, PapyrusParser.HWS, PapyrusParser.LINE_COMMENT_POUND]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.singleLineStatement()
                pass
            elif token in [PapyrusParser.VERB_ADD, PapyrusParser.VERB_UPDATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.blockStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleLineStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def standaloneLine(self):
            return self.getTypedRuleContext(PapyrusParser.StandaloneLineContext,0)


        def NL(self):
            return self.getToken(PapyrusParser.NL, 0)

        def getRuleIndex(self):
            return PapyrusParser.RULE_singleLineStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleLineStatement" ):
                return visitor.visitSingleLineStatement(self)
            else:
                return visitor.visitChildren(self)




    def singleLineStatement(self):

        localctx = PapyrusParser.SingleLineStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleLineStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.standaloneLine()
            self.state = 81
            self.match(PapyrusParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStartingLine(self):
            return self.getTypedRuleContext(PapyrusParser.BlockStartingLineContext,0)


        def blockLines(self):
            return self.getTypedRuleContext(PapyrusParser.BlockLinesContext,0)


        def NL(self):
            return self.getToken(PapyrusParser.NL, 0)

        def getRuleIndex(self):
            return PapyrusParser.RULE_blockStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)




    def blockStatement(self):

        localctx = PapyrusParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_blockStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.blockStartingLine()
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PapyrusParser.INDENT]:
                self.state = 84
                self.blockLines()
                pass
            elif token in [PapyrusParser.NL]:
                self.state = 85
                self.match(PapyrusParser.NL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockLinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(PapyrusParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(PapyrusParser.DEDENT, 0)

        def standaloneLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PapyrusParser.StandaloneLineContext)
            else:
                return self.getTypedRuleContext(PapyrusParser.StandaloneLineContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PapyrusParser.NL)
            else:
                return self.getToken(PapyrusParser.NL, i)

        def getRuleIndex(self):
            return PapyrusParser.RULE_blockLines

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockLines" ):
                return visitor.visitBlockLines(self)
            else:
                return visitor.visitChildren(self)




    def blockLines(self):

        localctx = PapyrusParser.BlockLinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockLines)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(PapyrusParser.INDENT)
            self.state = 92 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 89
                self.standaloneLine()
                self.state = 90
                self.match(PapyrusParser.NL)
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapyrusParser.NL) | (1 << PapyrusParser.VERB_SET) | (1 << PapyrusParser.VERB_DELETE) | (1 << PapyrusParser.VERB_RUN) | (1 << PapyrusParser.HWS) | (1 << PapyrusParser.LINE_COMMENT_POUND))) != 0)):
                    break

            self.state = 96
            self.match(PapyrusParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStartingLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addLine(self):
            return self.getTypedRuleContext(PapyrusParser.AddLineContext,0)


        def updateLine(self):
            return self.getTypedRuleContext(PapyrusParser.UpdateLineContext,0)


        def getRuleIndex(self):
            return PapyrusParser.RULE_blockStartingLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStartingLine" ):
                return visitor.visitBlockStartingLine(self)
            else:
                return visitor.visitChildren(self)




    def blockStartingLine(self):

        localctx = PapyrusParser.BlockStartingLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockStartingLine)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PapyrusParser.VERB_ADD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.addLine()
                pass
            elif token in [PapyrusParser.VERB_UPDATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.updateLine()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StandaloneLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setLine(self):
            return self.getTypedRuleContext(PapyrusParser.SetLineContext,0)


        def deleteLine(self):
            return self.getTypedRuleContext(PapyrusParser.DeleteLineContext,0)


        def runLine(self):
            return self.getTypedRuleContext(PapyrusParser.RunLineContext,0)


        def blankLine(self):
            return self.getTypedRuleContext(PapyrusParser.BlankLineContext,0)


        def getRuleIndex(self):
            return PapyrusParser.RULE_standaloneLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStandaloneLine" ):
                return visitor.visitStandaloneLine(self)
            else:
                return visitor.visitChildren(self)




    def standaloneLine(self):

        localctx = PapyrusParser.StandaloneLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_standaloneLine)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PapyrusParser.VERB_SET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.setLine()
                pass
            elif token in [PapyrusParser.VERB_DELETE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.deleteLine()
                pass
            elif token in [PapyrusParser.VERB_RUN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.runLine()
                pass
            elif token in [PapyrusParser.NL, PapyrusParser.HWS, PapyrusParser.LINE_COMMENT_POUND]:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.blankLine()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERB_SET(self):
            return self.getToken(PapyrusParser.VERB_SET, 0)

        def attributeName(self):
            return self.getTypedRuleContext(PapyrusParser.AttributeNameContext,0)


        def setLineValue(self):
            return self.getTypedRuleContext(PapyrusParser.SetLineValueContext,0)


        def lineEndingJunk(self):
            return self.getTypedRuleContext(PapyrusParser.LineEndingJunkContext,0)


        def HWS(self, i:int=None):
            if i is None:
                return self.getTokens(PapyrusParser.HWS)
            else:
                return self.getToken(PapyrusParser.HWS, i)

        def getRuleIndex(self):
            return PapyrusParser.RULE_setLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetLine" ):
                return visitor.visitSetLine(self)
            else:
                return visitor.visitChildren(self)




    def setLine(self):

        localctx = PapyrusParser.SetLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_setLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PapyrusParser.VERB_SET)
            self.state = 110 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 109
                self.match(PapyrusParser.HWS)
                self.state = 112 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 114
            self.attributeName()
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.match(PapyrusParser.HWS)
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 120
            self.setLineValue()
            self.state = 121
            self.lineEndingJunk()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERB_ADD(self):
            return self.getToken(PapyrusParser.VERB_ADD, 0)

        def typeName(self):
            return self.getTypedRuleContext(PapyrusParser.TypeNameContext,0)


        def COLON(self):
            return self.getToken(PapyrusParser.COLON, 0)

        def lineEndingJunk(self):
            return self.getTypedRuleContext(PapyrusParser.LineEndingJunkContext,0)


        def HWS(self, i:int=None):
            if i is None:
                return self.getTokens(PapyrusParser.HWS)
            else:
                return self.getToken(PapyrusParser.HWS, i)

        def objectName(self):
            return self.getTypedRuleContext(PapyrusParser.ObjectNameContext,0)


        def bytesLiteral(self):
            return self.getTypedRuleContext(PapyrusParser.BytesLiteralContext,0)


        def getRuleIndex(self):
            return PapyrusParser.RULE_addLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddLine" ):
                return visitor.visitAddLine(self)
            else:
                return visitor.visitChildren(self)




    def addLine(self):

        localctx = PapyrusParser.AddLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_addLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(PapyrusParser.VERB_ADD)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 124
                self.match(PapyrusParser.HWS)
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 129
            self.typeName()
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 130
                    self.match(PapyrusParser.HWS)
                    self.state = 133 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==PapyrusParser.HWS):
                        break

                self.state = 135
                self.objectName()


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PapyrusParser.HWS:
                self.state = 138
                self.match(PapyrusParser.HWS)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(PapyrusParser.COLON)
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PapyrusParser.HWS:
                    self.state = 145
                    self.match(PapyrusParser.HWS)
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 151
                self.bytesLiteral()


            self.state = 154
            self.lineEndingJunk()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERB_DELETE(self):
            return self.getToken(PapyrusParser.VERB_DELETE, 0)

        def typeName(self):
            return self.getTypedRuleContext(PapyrusParser.TypeNameContext,0)


        def objectNameSearchable(self):
            return self.getTypedRuleContext(PapyrusParser.ObjectNameSearchableContext,0)


        def lineEndingJunk(self):
            return self.getTypedRuleContext(PapyrusParser.LineEndingJunkContext,0)


        def HWS(self, i:int=None):
            if i is None:
                return self.getTokens(PapyrusParser.HWS)
            else:
                return self.getToken(PapyrusParser.HWS, i)

        def getRuleIndex(self):
            return PapyrusParser.RULE_deleteLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteLine" ):
                return visitor.visitDeleteLine(self)
            else:
                return visitor.visitChildren(self)




    def deleteLine(self):

        localctx = PapyrusParser.DeleteLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_deleteLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(PapyrusParser.VERB_DELETE)
            self.state = 158 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                self.match(PapyrusParser.HWS)
                self.state = 160 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 162
            self.typeName()
            self.state = 164 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 163
                self.match(PapyrusParser.HWS)
                self.state = 166 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 168
            self.objectNameSearchable()
            self.state = 169
            self.lineEndingJunk()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERB_UPDATE(self):
            return self.getToken(PapyrusParser.VERB_UPDATE, 0)

        def typeName(self):
            return self.getTypedRuleContext(PapyrusParser.TypeNameContext,0)


        def objectNameSearchable(self):
            return self.getTypedRuleContext(PapyrusParser.ObjectNameSearchableContext,0)


        def COLON(self):
            return self.getToken(PapyrusParser.COLON, 0)

        def lineEndingJunk(self):
            return self.getTypedRuleContext(PapyrusParser.LineEndingJunkContext,0)


        def HWS(self, i:int=None):
            if i is None:
                return self.getTokens(PapyrusParser.HWS)
            else:
                return self.getToken(PapyrusParser.HWS, i)

        def getRuleIndex(self):
            return PapyrusParser.RULE_updateLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateLine" ):
                return visitor.visitUpdateLine(self)
            else:
                return visitor.visitChildren(self)




    def updateLine(self):

        localctx = PapyrusParser.UpdateLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_updateLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(PapyrusParser.VERB_UPDATE)
            self.state = 173 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 172
                self.match(PapyrusParser.HWS)
                self.state = 175 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 177
            self.typeName()
            self.state = 179 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 178
                self.match(PapyrusParser.HWS)
                self.state = 181 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 183
            self.objectNameSearchable()
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PapyrusParser.HWS:
                self.state = 184
                self.match(PapyrusParser.HWS)
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 190
            self.match(PapyrusParser.COLON)
            self.state = 191
            self.lineEndingJunk()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RunLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERB_RUN(self):
            return self.getToken(PapyrusParser.VERB_RUN, 0)

        def macro(self):
            return self.getTypedRuleContext(PapyrusParser.MacroContext,0)


        def lineEndingJunk(self):
            return self.getTypedRuleContext(PapyrusParser.LineEndingJunkContext,0)


        def HWS(self, i:int=None):
            if i is None:
                return self.getTokens(PapyrusParser.HWS)
            else:
                return self.getToken(PapyrusParser.HWS, i)

        def getRuleIndex(self):
            return PapyrusParser.RULE_runLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRunLine" ):
                return visitor.visitRunLine(self)
            else:
                return visitor.visitChildren(self)




    def runLine(self):

        localctx = PapyrusParser.RunLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_runLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(PapyrusParser.VERB_RUN)
            self.state = 195 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 194
                self.match(PapyrusParser.HWS)
                self.state = 197 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PapyrusParser.HWS):
                    break

            self.state = 199
            self.macro()
            self.state = 200
            self.lineEndingJunk()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlankLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lineEndingJunk(self):
            return self.getTypedRuleContext(PapyrusParser.LineEndingJunkContext,0)


        def getRuleIndex(self):
            return PapyrusParser.RULE_blankLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlankLine" ):
                return visitor.visitBlankLine(self)
            else:
                return visitor.visitChildren(self)




    def blankLine(self):

        localctx = PapyrusParser.BlankLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_blankLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.lineEndingJunk()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetLineValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def anyLiteral(self):
            return self.getTypedRuleContext(PapyrusParser.AnyLiteralContext,0)


        def objectAttribute(self):
            return self.getTypedRuleContext(PapyrusParser.ObjectAttributeContext,0)


        def macro(self):
            return self.getTypedRuleContext(PapyrusParser.MacroContext,0)


        def getRuleIndex(self):
            return PapyrusParser.RULE_setLineValue

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetLineValue" ):
                return visitor.visitSetLineValue(self)
            else:
                return visitor.visitChildren(self)




    def setLineValue(self):

        localctx = PapyrusParser.SetLineValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_setLineValue)
        try:
            self.state = 207
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 204
                self.anyLiteral()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 205
                self.objectAttribute()
                pass
